🐎 Improve:  Enhance existing functionality

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -151,6 +151,9 @@
         }
       }
     },
+    "不迁移" : {
+
+    },
     "仓库" : {
       "localizations" : {
         "en" : {
@@ -172,6 +175,7 @@
       }
     },
     "仓库目录" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -273,9 +277,6 @@
           }
         }
       }
-    },
-    "媒体仓库位置" : {
-
     },
     "宽度至少 %lf" : {
       "localizations" : {
@@ -490,6 +491,9 @@
         }
       }
     },
+    "是否将现有数据迁移到新位置？\n选择\"不迁移\"将在新位置创建空白仓库。" : {
+
+    },
     "是本地目录，不会同步" : {
       "localizations" : {
         "en" : {
@@ -559,6 +563,9 @@
           }
         }
       }
+    },
+    "正在迁移数据..." : {
+
     },
     "测试" : {
       "localizations" : {
@@ -702,6 +709,9 @@
           }
         }
       }
+    },
+    "迁移数据" : {
+
     },
     "退出" : {
       "localizations" : {
