🐎 Improve:  Enhance existing functionality

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -59,6 +59,9 @@
         }
       }
     },
+    "Error: %@" : {
+
+    },
     "Features" : {
       "localizations" : {
         "en" : {
@@ -418,6 +421,9 @@
         }
       }
     },
+    "打开当前仓库" : {
+
+    },
     "打开数据库目录" : {
 
     },
@@ -431,6 +437,9 @@
         }
       }
     },
+    "打开目标仓库" : {
+
+    },
     "打开系统设置登录iCloud" : {
       "localizations" : {
         "en" : {
@@ -440,6 +449,9 @@
           }
         }
       }
+    },
+    "推荐" : {
+
     },
     "播放次数" : {
       "localizations" : {
@@ -617,6 +629,9 @@
         }
       }
     },
+    "确定" : {
+
+    },
     "订阅" : {
       "localizations" : {
         "en" : {
@@ -709,6 +724,9 @@
           }
         }
       }
+    },
+    "迁移失败" : {
+
     },
     "迁移数据" : {
 
