🐎 Improve:  Enhance existing functionality

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -20,10 +20,28 @@
         }
       }
     },
+    "• 取消迁移可能导致数据不完整" : {
+
+    },
+    "• 如果源数据在iCloud中且有未下载的文件，需要等待下载完成" : {
+
+    },
+    "• 请确保目标位置有足够的存储空间" : {
+
+    },
+    "• 迁移时间取决于数据量大小，可能需要较长时间" : {
+
+    },
+    "• 迁移过程中请勿关闭应用" : {
+
+    },
     "☹️ 暂不能从App Store获取产品列表" : {
 
     },
     "♾️" : {
+
+    },
+    "⚠️ 重要提示：" : {
 
     },
     "🏃 暂无" : {
@@ -177,6 +195,9 @@
         }
       }
     },
+    "仓库地址" : {
+
+    },
     "仓库目录" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -231,6 +252,9 @@
         }
       }
     },
+    "包含以下文件：" : {
+
+    },
     "取消" : {
       "localizations" : {
         "en" : {
@@ -240,6 +264,9 @@
           }
         }
       }
+    },
+    "取消迁移" : {
+
     },
     "启动失败" : {
       "localizations" : {
@@ -281,6 +308,9 @@
         }
       }
     },
+    "完成" : {
+
+    },
     "宽度至少 %lf" : {
       "localizations" : {
         "en" : {
@@ -320,6 +350,9 @@
           }
         }
       }
+    },
+    "已有以下文件：" : {
+
     },
     "已订阅" : {
       "localizations" : {
@@ -421,9 +454,6 @@
         }
       }
     },
-    "打开当前仓库" : {
-
-    },
     "打开数据库目录" : {
 
     },
@@ -436,9 +466,6 @@
           }
         }
       }
-    },
-    "打开目标仓库" : {
-
     },
     "打开系统设置登录iCloud" : {
       "localizations" : {
@@ -493,6 +520,9 @@
         }
       }
     },
+    "数据迁移" : {
+
+    },
     "是 iCloud 云盘目录，会保持同步" : {
       "localizations" : {
         "en" : {
@@ -503,7 +533,7 @@
         }
       }
     },
-    "是否将现有数据迁移到新位置？\n选择\"不迁移\"将在新位置创建空白仓库。" : {
+    "是否将现有数据迁移到新位置？" : {
 
     },
     "是本地目录，不会同步" : {
@@ -599,6 +629,9 @@
         }
       }
     },
+    "源仓库" : {
+
+    },
     "版本" : {
       "localizations" : {
         "en" : {
@@ -628,6 +661,9 @@
           }
         }
       }
+    },
+    "目标仓库" : {
+
     },
     "确定" : {
 
@@ -725,7 +761,7 @@
         }
       }
     },
-    "迁移失败" : {
+    "迁移完成" : {
 
     },
     "迁移数据" : {
@@ -750,6 +786,9 @@
           }
         }
       }
+    },
+    "选择\"不迁移\"将在新位置创建空白仓库。" : {
+
     },
     "遇到问题无法继续运行" : {
       "localizations" : {
