🐎 Improve:  Enhance existing functionality

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -520,6 +520,9 @@
         }
       }
     },
+    "放弃" : {
+
+    },
     "数据迁移" : {
 
     },
@@ -606,9 +609,6 @@
         }
       }
     },
-    "正在迁移数据..." : {
-
-    },
     "测试" : {
       "localizations" : {
         "en" : {
@@ -663,9 +663,6 @@
       }
     },
     "目标仓库" : {
-
-    },
-    "确定" : {
 
     },
     "订阅" : {
@@ -761,10 +758,22 @@
         }
       }
     },
+    "迁移中..." : {
+
+    },
+    "迁移出现问题: %@" : {
+
+    },
     "迁移完成" : {
 
     },
+    "迁移已完成" : {
+
+    },
     "迁移数据" : {
+
+    },
+    "迁移状态" : {
 
     },
     "退出" : {
