💄 UI:  Update user interface elements

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -20,6 +20,15 @@
         }
       }
     },
+    "%lld 下载中" : {
+
+    },
+    "%lld 已下载" : {
+
+    },
+    "%lld 未下载" : {
+
+    },
     "• 取消迁移可能导致数据不完整" : {
 
     },
@@ -252,9 +261,6 @@
         }
       }
     },
-    "包含以下文件：" : {
-
-    },
     "取消" : {
       "localizations" : {
         "en" : {
@@ -350,9 +356,6 @@
           }
         }
       }
-    },
-    "已有以下文件：" : {
-
     },
     "已订阅" : {
       "localizations" : {
@@ -569,6 +572,9 @@
         }
       }
     },
+    "检查中..." : {
+
+    },
     "正在使用" : {
       "localizations" : {
         "en" : {
@@ -598,6 +604,9 @@
           }
         }
       }
+    },
+    "正在检查文件状态..." : {
+
     },
     "正在读取仓库" : {
       "localizations" : {
