💄 UI:  Update user interface elements

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -261,6 +261,9 @@
         }
       }
     },
+    "包含以下文件：" : {
+
+    },
     "取消" : {
       "localizations" : {
         "en" : {
@@ -356,6 +359,9 @@
           }
         }
       }
+    },
+    "已有以下文件：" : {
+
     },
     "已订阅" : {
       "localizations" : {
@@ -572,9 +578,6 @@
         }
       }
     },
-    "检查中..." : {
-
-    },
     "正在使用" : {
       "localizations" : {
         "en" : {
@@ -604,9 +607,6 @@
           }
         }
       }
-    },
-    "正在检查文件状态..." : {
-
     },
     "正在读取仓库" : {
       "localizations" : {
