💄 UI:  Update user interface elements

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -284,6 +284,9 @@
         }
       }
     },
+    "在 Finder 中显示" : {
+
+    },
     "基础版本最多支持 %lld 个文件" : {
       "localizations" : {
         "en" : {
@@ -293,6 +296,9 @@
           }
         }
       }
+    },
+    "复制路径" : {
+
     },
     "好" : {
       "localizations" : {
