🐎 Improve:  Enhance existing functionality

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -35,7 +35,7 @@
     "• 如果源数据在iCloud中且有未下载的文件，需要等待下载完成" : {
 
     },
-    "• 请确保目标位置有足够的存储空间" : {
+    "• 请保目标位置有足够的存储空间" : {
 
     },
     "• 迁移时间取决于数据量大小，可能需要较长时间" : {
@@ -776,6 +776,9 @@
     "迁移完成" : {
 
     },
+    "迁移已取消" : {
+
+    },
     "迁移已完成" : {
 
     },
@@ -827,6 +830,9 @@
           }
         }
       }
+    },
+    "重试迁移" : {
+
     },
     "隐私政策" : {
       "localizations" : {
