💄 UI:  Update user interface elements

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -204,9 +204,6 @@
         }
       }
     },
-    "仓库地址" : {
-
-    },
     "仓库目录" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -287,9 +284,6 @@
         }
       }
     },
-    "在 Finder 中显示" : {
-
-    },
     "基础版本最多支持 %lld 个文件" : {
       "localizations" : {
         "en" : {
@@ -299,9 +293,6 @@
           }
         }
       }
-    },
-    "复制路径" : {
-
     },
     "大小" : {
 
@@ -681,6 +672,12 @@
       }
     },
     "目标仓库" : {
+
+    },
+    "种类" : {
+
+    },
+    "计算中..." : {
 
     },
     "订阅" : {
