💄 UI:  Update user interface elements

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -29,6 +29,9 @@
     "%lld 未下载" : {
 
     },
+    "•" : {
+
+    },
     "• 取消迁移可能导致数据不完整" : {
 
     },
@@ -181,9 +184,6 @@
         }
       }
     },
-    "不迁移" : {
-
-    },
     "仓库" : {
       "localizations" : {
         "en" : {
@@ -215,9 +215,6 @@
         }
       }
     },
-    "保存更改" : {
-
-    },
     "共 %@" : {
       "localizations" : {
         "en" : {
@@ -248,6 +245,9 @@
         }
       }
     },
+    "准备迁移" : {
+
+    },
     "刷新" : {
       "localizations" : {
         "en" : {
@@ -267,6 +267,9 @@
           }
         }
       }
+    },
+    "取消操作" : {
+
     },
     "取消迁移" : {
 
@@ -379,6 +382,9 @@
           }
         }
       }
+    },
+    "当前" : {
+
     },
     "恢复购买" : {
       "localizations" : {
@@ -542,7 +548,7 @@
         }
       }
     },
-    "是否将现有数据迁移到新位置？" : {
+    "是否需要迁移现有数据到新位置？" : {
 
     },
     "是本地目录，不会同步" : {
@@ -672,6 +678,9 @@
       }
     },
     "目标仓库" : {
+
+    },
+    "直接使用" : {
 
     },
     "种类" : {
@@ -813,9 +822,6 @@
           }
         }
       }
-    },
-    "选择\"不迁移\"将在新位置创建空白仓库。" : {
-
     },
     "遇到问题无法继续运行" : {
       "localizations" : {
