💄 UI:  Update user interface elements

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -29,22 +29,19 @@
     "%lld 未下载" : {
 
     },
-    "•" : {
+    "• 取消操作：保持原位置不变" : {
 
     },
-    "• 取消迁移可能导致数据不完整" : {
+    "• 如果源数据在 iCloud 中且有未下载的文件，需要等待下载完成，可能需要较长时间" : {
 
     },
-    "• 如果源数据在iCloud中且有未下载的文件，需要等待下载完成" : {
+    "• 直接使用：直接使用新位置，原有数据保持不变" : {
 
     },
-    "• 请保目标位置有足够的存储空间" : {
+    "• 迁移数据：将现有数据迁移到新位置" : {
 
     },
-    "• 迁移时间取决于数据量大小，可能需要较长时间" : {
-
-    },
-    "• 迁移过程中请勿关闭应用" : {
+    "• 迁移过程中请勿关闭应用，取消迁移可能导致数据不完整" : {
 
     },
     "☹️ 暂不能从App Store获取产品列表" : {
@@ -215,6 +212,9 @@
         }
       }
     },
+    "保持原位置不变" : {
+
+    },
     "共 %@" : {
       "localizations" : {
         "en" : {
@@ -342,6 +342,9 @@
           }
         }
       }
+    },
+    "将现有数据迁移到新位置" : {
+
     },
     "将音乐文件拖到这里可添加" : {
       "localizations" : {
@@ -535,9 +538,6 @@
     "放弃" : {
 
     },
-    "数据迁移" : {
-
-    },
     "是 iCloud 云盘目录，会保持同步" : {
       "localizations" : {
         "en" : {
@@ -547,9 +547,6 @@
           }
         }
       }
-    },
-    "是否需要迁移现有数据到新位置？" : {
-
     },
     "是本地目录，不会同步" : {
       "localizations" : {
@@ -645,6 +642,7 @@
 
     },
     "版本" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -683,7 +681,7 @@
     "直接使用" : {
 
     },
-    "种类" : {
+    "直接使用新位置，原有数据保持不变" : {
 
     },
     "计算中..." : {
