🐛 Bugfix:  Fix a bug

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -274,6 +274,9 @@
     "取消迁移" : {
 
     },
+    "取消迁移能会导致数据不完整，建议等待迁移完成。" : {
+
+    },
     "名称" : {
 
     },
@@ -682,6 +685,15 @@
 
     },
     "直接使用新位置，原有数据保持不变" : {
+
+    },
+    "确定取消" : {
+
+    },
+    "确要取消迁移吗？" : {
+
+    },
+    "继续迁移" : {
 
     },
     "计算中..." : {
