🎨 Chore:  Minor adjustments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -687,6 +687,9 @@
     "直接使用新位置，原有数据保持不变" : {
 
     },
+    "确定" : {
+
+    },
     "确定取消" : {
 
     },
@@ -846,6 +849,12 @@
           }
         }
       }
+    },
+    "重置所有设置并退出 APP" : {
+
+    },
+    "重置设置，恢复成系统默认状态" : {
+
     },
     "重试" : {
       "localizations" : {
