🐛 Bugfix:  Fix a bug

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -400,6 +400,9 @@
         }
       }
     },
+    "恢复默认设置" : {
+
+    },
     "或" : {
       "localizations" : {
         "en" : {
@@ -495,6 +498,9 @@
       }
     },
     "推荐" : {
+
+    },
+    "提示" : {
 
     },
     "播放次数" : {
@@ -619,6 +625,9 @@
           }
         }
       }
+    },
+    "正在重置" : {
+
     },
     "测试" : {
       "localizations" : {
@@ -779,6 +788,9 @@
         }
       }
     },
+    "请退出 APP，再重新打开" : {
+
+    },
     "调试" : {
       "localizations" : {
         "en" : {
@@ -850,7 +862,7 @@
         }
       }
     },
-    "重置所有设置并退出 APP" : {
+    "重置所有设置" : {
 
     },
     "重置设置，恢复成系统默认状态" : {
