--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -107,6 +107,7 @@
       }
     },
     "Hi" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
