🎨 Chore:  Minor adjustments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -170,6 +170,7 @@
       }
     },
     "下载" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
