--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -337,6 +337,7 @@
       }
     },
     "封面图目录" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -426,6 +427,7 @@
       }
     },
     "打开App Support目录" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -436,6 +438,7 @@
       }
     },
     "打开iCloud Documents" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -456,6 +459,7 @@
       }
     },
     "打开容器目录" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -466,6 +470,7 @@
       }
     },
     "打开封面图目录" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -475,10 +480,8 @@
         }
       }
     },
-    "打开数据库目录" : {
-
-    },
     "打开文档目录" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -498,9 +501,6 @@
           }
         }
       }
-    },
-    "打开缩略图目录" : {
-
     },
     "推荐" : {
 
@@ -582,6 +582,7 @@
       }
     },
     "根据文件自动生成封面图" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -797,6 +798,7 @@
 
     },
     "调试" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
