🐛 Bugfix:  Fix a bug

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -295,6 +295,9 @@
         }
       }
     },
+    "复制错误信息" : {
+
+    },
     "大小" : {
 
     },
@@ -364,6 +367,9 @@
           }
         }
       }
+    },
+    "已复制" : {
+
     },
     "已订阅" : {
       "localizations" : {
