🐎 Improve:  Enhance existing functionality

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -128,6 +128,9 @@
         }
       }
     },
+    "iCloud 值: %@" : {
+
+    },
     "Migrate" : {
 
     },
@@ -135,6 +138,12 @@
 
     },
     "Setting" : {
+
+    },
+    "UserDefaults 值: %@" : {
+
+    },
+    "UserDefaults 调试视图" : {
 
     },
     "一次性产品" : {
@@ -232,6 +241,9 @@
         }
       }
     },
+    "共 %lld 项" : {
+
+    },
     "关闭" : {
       "localizations" : {
         "en" : {
@@ -251,6 +263,9 @@
           }
         }
       }
+    },
+    "刷新数据" : {
+
     },
     "取消" : {
       "localizations" : {
@@ -394,6 +409,9 @@
     "当前" : {
 
     },
+    "当前插件ID: %@" : {
+
+    },
     "恢复购买" : {
       "localizations" : {
         "en" : {
@@ -510,6 +528,12 @@
     "提示" : {
 
     },
+    "插件仓库调试视图" : {
+
+    },
+    "搜索键或值" : {
+
+    },
     "播放次数" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -555,6 +579,7 @@
 
     },
     "是 iCloud 云盘目录，会保持同步" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -583,6 +608,9 @@
           }
         }
       }
+    },
+    "显示 iCloud 值" : {
+
     },
     "根据文件自动生成封面图" : {
       "extractionState" : "stale",
@@ -636,6 +664,9 @@
       }
     },
     "正在重置" : {
+
+    },
+    "没有找到匹配的键值对" : {
 
     },
     "测试" : {
