🐎 Improve: Refactor audio list views and update localization strings

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -746,6 +746,7 @@
 
     },
     "订阅" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
