--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -34,6 +34,9 @@
     "• 迁移过程中请勿关闭应用，取消迁移可能导致数据不完整" : {
 
     },
+    "×" : {
+
+    },
     "☹️ 暂不能从App Store获取产品列表" : {
 
     },
@@ -228,7 +231,6 @@
 
     },
     "关闭" : {
-      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -909,6 +911,12 @@
       }
     },
     "重试迁移" : {
+
+    },
+    "错误代码: %lld" : {
+
+    },
+    "错误域: %@" : {
 
     },
     "隐私政策" : {
