🎨 Chore: Remove AudioErrorView and update related code

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -34,9 +34,6 @@
     "• 迁移过程中请勿关闭应用，取消迁移可能导致数据不完整" : {
 
     },
-    "×" : {
-
-    },
     "☹️ 暂不能从App Store获取产品列表" : {
 
     },
@@ -231,6 +228,7 @@
 
     },
     "关闭" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -911,12 +909,6 @@
       }
     },
     "重试迁移" : {
-
-    },
-    "错误代码: %lld" : {
-
-    },
-    "错误域: %@" : {
 
     },
     "隐私政策" : {
