🆕 Feature: Add reset functionality with new sheet views

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -653,7 +653,7 @@
         }
       }
     },
-    "正在重置" : {
+    "正在重置…" : {
 
     },
     "没有找到匹配的键值对" : {
@@ -736,7 +736,13 @@
     "确要取消迁移吗？" : {
 
     },
+    "确认重置？" : {
+
+    },
     "继续迁移" : {
+
+    },
+    "继续重置" : {
 
     },
     "美好即将开始" : {
@@ -822,6 +828,9 @@
         }
       }
     },
+    "请稍候，数据仓库将恢复为默认，用户偏好将被重置。" : {
+
+    },
     "请退出 APP，再重新打开" : {
 
     },
@@ -894,6 +903,9 @@
           }
         }
       }
+    },
+    "重置后：\n- 数据仓库将恢复为默认位置\n- 所有用户偏好将被重置\n此操作不可撤销。是否继续？" : {
+
     },
     "重置设置，恢复成系统默认状态" : {
 
