💄 UI: Update launch background color configuration

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -152,6 +152,9 @@
         }
       }
     },
+    "上一页" : {
+
+    },
     "上次播放" : {
       "localizations" : {
         "en" : {
@@ -161,6 +164,9 @@
           }
         }
       }
+    },
+    "下一页" : {
+
     },
     "下载" : {
       "extractionState" : "stale",
@@ -687,6 +693,9 @@
       }
     },
     "源仓库" : {
+
+    },
+    "滑动查看更多" : {
 
     },
     "版本" : {
