💄 UI: Update app icons to new version

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -152,9 +152,6 @@
         }
       }
     },
-    "上一页" : {
-
-    },
     "上次播放" : {
       "localizations" : {
         "en" : {
@@ -164,9 +161,6 @@
           }
         }
       }
-    },
-    "下一页" : {
-
     },
     "下载" : {
       "extractionState" : "stale",
@@ -296,6 +290,9 @@
         }
       }
     },
+    "在系统设置中登录 iCloud 账户后，此选项可用" : {
+
+    },
     "基础版本最多支持 %lld 个文件" : {
       "localizations" : {
         "en" : {
@@ -402,9 +399,6 @@
           }
         }
       }
-    },
-    "当前" : {
-
     },
     "当前插件ID: %@" : {
 
@@ -693,9 +687,6 @@
       }
     },
     "源仓库" : {
-
-    },
-    "滑动查看更多" : {
 
     },
     "版本" : {
