💄 UI: Update book tile layout and localizable strings

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -244,6 +244,9 @@
     "准备好探索你的音乐世界" : {
 
     },
+    "初始化失败" : {
+
+    },
     "刷新" : {
       "localizations" : {
         "en" : {
@@ -631,6 +634,9 @@
           }
         }
       }
+    },
+    "正在初始化..." : {
+
     },
     "正在复制 %lld" : {
       "localizations" : {
