--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4,8 +4,24 @@
     "" : {
 
     },
+    "  • %@" : {
+
+    },
+    "(%lld 个订阅)" : {
+
+    },
     "%@" : {
 
+    },
+    "%@ (%lld)" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ (%2$lld)"
+          }
+        }
+      }
     },
     "%lld" : {
 
@@ -14,6 +30,9 @@
 
     },
     "%lld 个文件" : {
+
+    },
+    "%lld 个订阅选项" : {
 
     },
     "%lld 已下载" : {
@@ -56,6 +75,9 @@
     "2个订阅选项" : {
 
     },
+    "All Statuses (%lld)" : {
+
+    },
     "App Demo" : {
 
     },
@@ -70,6 +92,9 @@
         }
       }
     },
+    "Cars (%lld)" : {
+
+    },
     "EEEEEE" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -82,6 +107,7 @@
       }
     },
     "Features" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -113,6 +139,18 @@
         }
       }
     },
+    "Highest Product:" : {
+
+    },
+    "Highest Product: 无" : {
+
+    },
+    "Highest Status:" : {
+
+    },
+    "Highest Status: 无" : {
+
+    },
     "iCloud" : {
       "localizations" : {
         "en" : {
@@ -126,16 +164,46 @@
     "iCloud 值: %@" : {
 
     },
+    "ID: %@" : {
+
+    },
     "ID: 3F19ED53" : {
 
     },
     "Migrate" : {
 
     },
+    "NonRenewables (%lld)" : {
+
+    },
+    "Products" : {
+
+    },
+    "Purchased" : {
+
+    },
     "Setting" : {
 
     },
     "Software Services Pro" : {
+
+    },
+    "state=" : {
+
+    },
+    "state=%lld" : {
+
+    },
+    "Store" : {
+
+    },
+    "Subscription Groups (%lld)" : {
+
+    },
+    "Subscription Status" : {
+
+    },
+    "Subscriptions (%lld)" : {
 
     },
     "UserDefaults 值: %@" : {
@@ -163,6 +231,9 @@
           }
         }
       }
+    },
+    "一次性购买" : {
+
     },
     "上次播放" : {
       "localizations" : {
@@ -270,6 +341,12 @@
       }
     },
     "刷新数据" : {
+
+    },
+    "加载中…" : {
+
+    },
+    "加载产品" : {
 
     },
     "取消" : {
@@ -386,6 +463,7 @@
       }
     },
     "小汽车" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -394,6 +472,9 @@
           }
         }
       }
+    },
+    "尚未加载产品" : {
+
     },
     "已复制" : {
 
@@ -623,10 +704,22 @@
     "显示 iCloud 值" : {
 
     },
+    "暂无一次性购买商品" : {
+
+    },
+    "暂无消耗品" : {
+
+    },
+    "暂无订阅商品" : {
+
+    },
+    "暂无非续订商品" : {
+
+    },
     "暂时不能获取歌曲仓库信息" : {
 
     },
-    "查看订阅" : {
+    "更新订阅状态" : {
 
     },
     "根据文件自动生成封面图" : {
@@ -700,6 +793,12 @@
         }
       }
     },
+    "测试已购" : {
+
+    },
+    "消耗品" : {
+
+    },
     "添加" : {
       "localizations" : {
         "en" : {
@@ -709,6 +808,9 @@
           }
         }
       }
+    },
+    "清空" : {
+
     },
     "源仓库" : {
 
@@ -769,6 +871,9 @@
     "确认重置？" : {
 
     },
+    "空" : {
+
+    },
     "继续迁移" : {
 
     },
@@ -782,7 +887,6 @@
 
     },
     "订阅" : {
-      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -802,9 +906,6 @@
           }
         }
       }
-    },
-    "订阅专业版本" : {
-
     },
     "订阅方案" : {
       "localizations" : {
@@ -959,6 +1060,9 @@
           }
         }
       }
+    },
+    "非续订" : {
+
     }
   },
   "version" : "1.0"
