--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -452,6 +452,9 @@
         }
       }
     },
+    "将有声书文件夹拖到这里可添加" : {
+
+    },
     "将现有数据迁移到新位置" : {
 
     },
@@ -708,9 +711,6 @@
 
     },
     "暂无一次性购买商品" : {
-
-    },
-    "暂无书籍" : {
 
     },
     "暂无消耗品" : {
