I18n: Update localized strings and database tips

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -728,6 +728,9 @@
     "更新订阅状态" : {
 
     },
+    "有声书仓库为空" : {
+
+    },
     "根据文件自动生成封面图" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -738,6 +741,9 @@
           }
         }
       }
+    },
+    "歌曲仓库为空" : {
+
     },
     "正在使用" : {
       "localizations" : {
