🔧 Refactor: Extract audio play mode management into independent AudioPlayModePlugin

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -386,6 +386,9 @@
         }
       }
     },
+    "喜欢的音频" : {
+
+    },
     "在系统设置中登录 iCloud 账户后，此选项可用" : {
 
     },
@@ -1013,6 +1016,9 @@
 
     },
     "迁移状态" : {
+
+    },
+    "还没有喜欢的音频" : {
 
     },
     "进入有声书仓库" : {
