chore:  minor adjustments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -386,6 +386,9 @@
         }
       }
     },
+    "喜欢的书籍" : {
+
+    },
     "喜欢的音频" : {
 
     },
@@ -1016,6 +1019,9 @@
 
     },
     "迁移状态" : {
+
+    },
+    "还没有喜欢的书籍" : {
 
     },
     "还没有喜欢的音频" : {
