🐛 Bugfix:  Fix a bug

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -431,6 +431,9 @@
     "如果您之前在其他设备上购买过订阅,可以通过点击下方的\"恢复购买\"按钮来恢复您的订阅。请确保您使用的是购买时所用的Apple ID 账号。" : {
 
     },
+    "存储位置未设置" : {
+
+    },
     "完成" : {
 
     },
@@ -966,6 +969,9 @@
           }
         }
       }
+    },
+    "请先设置媒体仓库的存储位置" : {
+
     },
     "请打开访达检查 iCloud 云盘是否可用" : {
       "extractionState" : "stale",
