🎨 Chore:  Minor adjustments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -92,6 +92,9 @@
     "Cars (%lld)" : {
 
     },
+    "Cisum" : {
+
+    },
     "Cisum Pro" : {
 
     },
@@ -232,6 +235,9 @@
     "一次性购买" : {
 
     },
+    "一键收藏，随时重温你的最爱。" : {
+
+    },
     "上次播放" : {
       "localizations" : {
         "en" : {
@@ -252,6 +258,18 @@
           }
         }
       }
+    },
+    "专注于音乐本身，享受纯粹体验。" : {
+
+    },
+    "专辑封面" : {
+
+    },
+    "个性定制" : {
+
+    },
+    "丰富的设置选项。" : {
+
     },
     "仓库" : {
       "extractionState" : "stale",
@@ -408,6 +426,9 @@
     "大小" : {
 
     },
+    "大尺寸封面，沉浸式视觉体验。" : {
+
+    },
     "好" : {
       "localizations" : {
         "en" : {
@@ -448,6 +469,9 @@
         }
       }
     },
+    "导入、整理、播放，一切尽在掌握。" : {
+
+    },
     "封面图目录" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -474,6 +498,9 @@
           }
         }
       }
+    },
+    "尊重用户" : {
+
     },
     "小汽车" : {
       "extractionState" : "stale",
@@ -625,6 +652,9 @@
         }
       }
     },
+    "按照你的喜好，定制专属体验。" : {
+
+    },
     "推荐" : {
 
     },
@@ -635,6 +665,15 @@
 
     },
     "搜索键或值" : {
+
+    },
+    "播放、暂停、上一曲、下一曲，一触即达。" : {
+
+    },
+    "播放你的音乐文件。" : {
+
+    },
+    "播放控制" : {
 
     },
     "播放次数" : {
@@ -658,6 +697,9 @@
         }
       }
     },
+    "支持多种音频格式，无需网络即可播放。" : {
+
+    },
     "支持我们持续开发" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -679,7 +721,13 @@
         }
       }
     },
+    "收藏喜爱" : {
+
+    },
     "放弃" : {
+
+    },
+    "无需注册，无需登录。" : {
 
     },
     "是 iCloud 云盘目录，会保持同步" : {
@@ -736,6 +784,15 @@
 
     },
     "有声书仓库为空" : {
+
+    },
+    "本地音乐" : {
+
+    },
+    "极简设计" : {
+
+    },
+    "标记你喜爱的歌曲。" : {
 
     },
     "根据文件自动生成封面图" : {
@@ -799,6 +856,12 @@
       }
     },
     "正在重置…" : {
+
+    },
+    "没有广告，没有干扰。" : {
+
+    },
+    "没有广告，没有弹窗，只有纯净的音乐体验。" : {
 
     },
     "没有找到匹配的键值对" : {
@@ -894,6 +957,18 @@
 
     },
     "空" : {
+
+    },
+    "简单直观的控制方式。" : {
+
+    },
+    "管理你的本地音乐。" : {
+
+    },
+    "精美的专辑封面展示。" : {
+
+    },
+    "纯净播放，简单纯粹。" : {
 
     },
     "继续迁移" : {
@@ -1100,6 +1175,9 @@
       }
     },
     "非续订" : {
+
+    },
+    "音乐库" : {
 
     }
   },
