🎨 Chore:  Minor adjustments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -72,7 +72,13 @@
         }
       }
     },
+    "1:24" : {
+
+    },
     "2个订阅选项" : {
+
+    },
+    "3:45" : {
 
     },
     "All Statuses (%lld)" : {
@@ -235,9 +241,6 @@
     "一次性购买" : {
 
     },
-    "一键收藏，随时重温你的最爱。" : {
-
-    },
     "上次播放" : {
       "localizations" : {
         "en" : {
@@ -259,16 +262,7 @@
         }
       }
     },
-    "专注于音乐本身，享受纯粹体验。" : {
-
-    },
     "专辑封面" : {
-
-    },
-    "个性定制" : {
-
-    },
-    "丰富的设置选项。" : {
 
     },
     "仓库" : {
@@ -426,9 +420,6 @@
     "大小" : {
 
     },
-    "大尺寸封面，沉浸式视觉体验。" : {
-
-    },
     "好" : {
       "localizations" : {
         "en" : {
@@ -469,9 +460,6 @@
         }
       }
     },
-    "导入、整理、播放，一切尽在掌握。" : {
-
-    },
     "封面图目录" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -498,9 +486,6 @@
           }
         }
       }
-    },
-    "尊重用户" : {
-
     },
     "小汽车" : {
       "extractionState" : "stale",
@@ -652,9 +637,6 @@
         }
       }
     },
-    "按照你的喜好，定制专属体验。" : {
-
-    },
     "推荐" : {
 
     },
@@ -667,10 +649,7 @@
     "搜索键或值" : {
 
     },
-    "播放、暂停、上一曲、下一曲，一触即达。" : {
-
-    },
-    "播放你的音乐文件。" : {
+    "播放你的音乐文件" : {
 
     },
     "播放控制" : {
@@ -697,9 +676,6 @@
         }
       }
     },
-    "支持多种音频格式，无需网络即可播放。" : {
-
-    },
     "支持我们持续开发" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -725,9 +701,6 @@
 
     },
     "放弃" : {
-
-    },
-    "无需注册，无需登录。" : {
 
     },
     "是 iCloud 云盘目录，会保持同步" : {
@@ -792,7 +765,7 @@
     "极简设计" : {
 
     },
-    "标记你喜爱的歌曲。" : {
+    "标记你喜爱的歌曲" : {
 
     },
     "根据文件自动生成封面图" : {
@@ -856,12 +829,6 @@
       }
     },
     "正在重置…" : {
-
-    },
-    "没有广告，没有干扰。" : {
-
-    },
-    "没有广告，没有弹窗，只有纯净的音乐体验。" : {
 
     },
     "没有找到匹配的键值对" : {
@@ -959,16 +926,16 @@
     "空" : {
 
     },
-    "简单直观的控制方式。" : {
+    "简单直观的控制方式" : {
 
     },
-    "管理你的本地音乐。" : {
+    "管理你的本地音乐" : {
 
     },
-    "精美的专辑封面展示。" : {
+    "精美的专辑封面展示" : {
 
     },
-    "纯净播放，简单纯粹。" : {
+    "纯净播放，简单纯粹" : {
 
     },
     "继续迁移" : {
