refactor(system): rename reset plugin to system plugin

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -300,6 +300,9 @@
     "保持原位置不变" : {
 
     },
+    "免费版" : {
+
+    },
     "共 %@" : {
       "localizations" : {
         "en" : {
@@ -532,6 +535,9 @@
           }
         }
       }
+    },
+    "已过期" : {
+
     },
     "当前插件ID: %@" : {
 
@@ -769,6 +775,9 @@
 
     },
     "有声书仓库为空" : {
+
+    },
+    "有效" : {
 
     },
     "本地音乐" : {
