chore:  minor adjustments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -10,6 +10,9 @@
     "(%lld 个订阅)" : {
 
     },
+    "/" : {
+
+    },
     "%@" : {
 
     },
@@ -426,6 +429,9 @@
         }
       }
     },
+    "处理中..." : {
+
+    },
     "复制错误信息" : {
 
     },
@@ -443,6 +449,7 @@
       }
     },
     "如果您之前在其他设备上购买过订阅，可以通过点击下方的\"恢复购买\"按钮来恢复您的订阅。\n\n请确保您使用的是购买时所用的 Apple ID 账号。\n\n恢复成功后，您将重新获得所有已购买的功能权限。" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -688,6 +695,7 @@
       }
     },
     "支付中..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -768,6 +776,9 @@
     "暂无订阅商品" : {
 
     },
+    "暂无订阅选项" : {
+
+    },
     "暂无非续订商品" : {
 
     },
@@ -841,6 +852,9 @@
           }
         }
       }
+    },
+    "正在恢复..." : {
+
     },
     "正在排序" : {
 
@@ -1069,6 +1083,9 @@
           }
         }
       }
+    },
+    "购买" : {
+
     },
     "软件功能全无限制" : {
       "extractionState" : "stale",
