chore:  minor adjustments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -680,6 +680,9 @@
         }
       }
     },
+    "拖放音乐文件到这里" : {
+
+    },
     "推荐" : {
 
     },
@@ -734,6 +737,9 @@
         }
       }
     },
+    "支持的格式" : {
+
+    },
     "支持的格式：%@" : {
       "localizations" : {
         "en" : {
@@ -786,6 +792,9 @@
 
     },
     "暂无一次性购买商品" : {
+
+    },
+    "暂无复制任务" : {
 
     },
     "暂无消耗品" : {
